crates/num-variants/tests/fail/struct.stderr
error: #[derive(NumVariants)] can only be used on an enum
 --> tests/fail/struct.rs:4:1
  |
4 | struct NotEnum {
  | ^^^^^^
